--- a/index.html
+++ b/index.html
@@ -1,59 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Personal Website</title> 
-    </head>
-    <body>
-        <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@200&family=Poppins&display=swap" rel="stylesheet">      
-        <link rel="stylesheet" href="style.css">
-        <section class="header">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abdullah Al Mamun Web Developer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section>
+        <div class="half-width">
+            <h1>Hello, I'M <br><span class="name-highlight">Abdullah Al Mamun</span></h1>
+            <p>Hi! I am Abdullah Al Mamun a web Developer focused on crafting great web experiences.Designing and Coding have been my passion since the days I started working with computers but I found myself into web development since 2020.I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/do not use this pic.png" alt="">
+        </div>
+        </section>
+        <section>
             <div class="half-width">
-                <h2>Hello I'm</h2>
-                <h1>Jack Smith</h1>
-                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.</p>
-                <a class="link-button" target="_blank" class="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">HIRE ME</a>
+                <img src="images/do not use this pic2.png" alt="">
             </div>
             <div class="half-width">
-                <img src="images/peter.png" alt="">
+                <h2>About</h2>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I am explore new things everyday with programming hero.I am so much excited to become web develoer</p>
+                <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">DOWNLOAD CV</a>
             </div>
         </section>
-        <section class="biography">
-            <div class="half-width">
-                <img src="images/peter_dream.png" alt="">
+        <section>
+            <h2><span class="name-highlight">LATEST</span> WORKING PROJECT</h2>
+            <br><br><br>
+            <div class="one-third-width">
+                <img src="images/image 4.png" alt="">
+                <br>
+                <h3>Power-x-gym (gym website)</h3>
+                <p>Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry.</p>
             </div>
-            <div class="half-width">
-                <h2>Biography</h2>
-                <p>I'm Abdullah al Mamun. i'm from Bangladesh.I start to learn Web developing.Web developing is amaging work for me.i can now make website by using HTML and CSS.I'm so much exited</p>
-                <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">Download CV</a>
+            <div class="one-third-width">
+                <img src="images/image 5.png" alt="">
+                <br>
+                <h3>Creative Agency</h3>
+                <p>Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry.
+                    </p>
+            </div>
+            <div class="one-third-width">
+                <img src="images/image 8.png" alt="">
+                <br>
+                <h3>Hard Rock Music</h3>
+                <p>Lorem Ipsum is simply dummy text of the
+                    printing and typesetting industry.
+                    </p>
             </div>
         </section>
-        <section class="latest-work">
-            <h2>My Latest Work</h2>
-            <div class="one-third-width">
-                <img src="images/latest-work/work-1.png" alt="">
+        <section>
+            <div class="message">
+                <h2>Work Inquiry</h2>
+                <a class="link-button2" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">Let’s Chat</a>
             </div>
-            <div class="one-third-width">
-                <img src="images/latest-work/work-2.jpg" alt="">
-            </div>
-            <div class="one-third-width">
-                <img src="images/latest-work/work-3.jpg" alt="">
-            </div>
-        </section>
-        <section class="footer">
             <div>
-                <h2>What Client Say</h2>
-                <h3>Bruce Moccy </h3>
-                <h5 class="Color">Founder & CEO Alies</h5>
-                <h3>"Lorem Ipsum is simply dummy text of the</br> printing and typesetting industry. Lorem Ipsum"<h3>
-                </div>
-                <div class="message">
-                    <h5>Leave me amessage in the</h5>
-                    <h2>programminghero1@gmail.com</h2>
-                </div>
+                <h3>Stay connected</h3>
+                <h2>hello@design.com</h2>
+                <img src="images/icons/image 6.png" alt="">
+                <img src="images/icons/Group 33059.png" alt="">
+                <img src="images/icons/image 7.png" alt="">
+            </div>
         </section>
-        
-    </body>
-    <footer>programming hero inatiative © all rights reserved</footer>
+</body>
 </html>
