Code updated and ready for assignment

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </section>
         <section>
-            <h2><span class="name-highlight">LATEST</span> WORKING PROJECT</h2>
+            <h1><span class="name-highlight">LATEST</span> WORKING PROJECT</h1>
             <br><br><br>
             <div class="one-third-width">
                 <img src="images/image 4.png" alt="">
@@ -58,11 +58,12 @@
         <section>
             <div class="message">
                 <h2>Work Inquiry</h2>
-                <a class="link-button2" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">Let’s Chat</a>
+                <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">Let’s Chat</a>
+                <img src="images" alt="">
             </div>
             <div>
                 <h3>Stay connected</h3>
-                <h2>hello@design.com</h2>
+                <h3>mamunee2011@gmail.com</h3>
                 <img src="images/icons/image 6.png" alt="">
                 <img src="images/icons/Group 33059.png" alt="">
                 <img src="images/icons/image 7.png" alt="">
