--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
             </div>
         </section>
         <section>
-            <div class="message">
+            <div class="Work-Inquiry">
                 <h2>Work Inquiry</h2>
                 <a class="link-button" target="_blank" href="https://www.facebook.com/mdabdullahall.mamun.7">Let’s Chat</a>
-                <img src="images" alt="">
             </div>
             <div>
                 <h3>Stay connected</h3>
